# controller-companion

./: .gitignore  README.md  controller-companion.spec  create_deb.sh  inno_setup.iss  pyinstaller.py  pyproject.toml
.github/workflows/: build.yaml  build_executables.yaml  publish_pypi.yaml
controller_companion/: __init__.py  action.py  controller.py  controller_observer.py  controller_state.py  mapping.py  pyinstaller.py  shortcut.py
controller_companion/app/: app.py  controller_layouts.py  create_action.py  popup_about.py  popup_create_action.py  resources.py  utils.py
controller_companion/app/widgets/: placeholder_entry.py
deb_files/: control  controller-companion.desktop
